// Copyright 2019 Thomas Nicollet
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";


enum AttributeType {
    String = 0;
    Integer = 1;
    Float = 2;
}

/*message ComponentAttribute {
    string attribute_name = 1;
    AttributeType type = 2;
    bytes content = 3;
}*/

message ComponentAttributeSchema {
    string name = 1;
    AttributeType field_type = 2;
}

message ComponentSchema {
    string name = 1;
    repeated ComponentAttributeSchema attributes = 2;
}


message AddComponentSchema {
    ComponentSchema schema = 1;
}

message ComponentsSchema {
    repeated ComponentSchema schemas = 1;
}
